--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,12 +1,16 @@
-<nav class="py-3 text-center">
-  <span>
-    <span data-sparks class="cursor-default text-[26px] font-semibold"
-      >TREVOR LEE</span
-    >
-  </span>
-  <span class="flex justify-center gap-3 font-mono">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/contact">Contact</a>
-  </span>
+<!-- <nav class="w-full">
+  <div class="flex justify-between">
+    <div>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/contact">Contact</a>
+    </div>
+    <div>
+      <input name="theme-toggle" id="theme-toggle" type="checkbox" />
+      <label for="theme-toggle">Enable dark mode</label>
+    </div>
+  </div>
 </nav>
+
+<script is:inline>
+</script> -->
