--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,15 +1,63 @@
 ---
 import "../styles/global.css";
-import "@fontsource/atkinson-hyperlegible/400.css";
-import "@fontsource/atkinson-hyperlegible/700.css";
+import "../styles/preflight.css";
 
+import { Icon } from "astro-icon/components";
 import Navigation from "../components/Navigation.astro";
+import Contact from "../components/Contact.tsx";
+import Footer from "@components/Footer.astro";
+
+import TimeAgo from 'javascript-time-ago'
+import en from 'javascript-time-ago/locale/en';
+
+TimeAgo.addDefaultLocale(en);
+const timeAgo = new TimeAgo('en-US');
+const buildTime = new Date();
+const buildTimeAgo = timeAgo.format(buildTime);
 
 const { pageTitle, pageSlug, category, fullWidth } = Astro.props;
+
+let onIndex = false;
+if (pageTitle === "Trevor Lee | Homepage") {
+  onIndex = true;
+}
 ---
 
 <html id="html" lang="en" prefix="og: http://ogp.me/ns#">
   <head>
+    <script is:inline>
+      const theme = (() => {
+        if (
+          typeof localStorage !== "undefined" &&
+          localStorage.getItem("theme")
+        ) {
+          return localStorage.getItem("theme");
+        }
+        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          return "dark";
+        }
+        return "light";
+      })();
+
+      if (theme === "light") {
+        document.documentElement.classList.remove("dark");
+      } else {
+        document.documentElement.classList.add("dark");
+      }
+
+      window.addEventListener("DOMContentLoaded", () => {
+        const checkbox = document.querySelector("#theme-toggle");
+        checkbox.checked = document.documentElement.classList.contains("dark");
+
+        const toggleTheme = () => {
+          const isDark = document.documentElement.classList.toggle("dark");
+          localStorage.setItem("theme", isDark ? "dark" : "light");
+          checkbox.checked = isDark;
+        };
+
+        checkbox.addEventListener("change", toggleTheme);
+      });
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.png" type="image/svg+xml" />
@@ -20,122 +68,43 @@ const { pageTitle, pageSlug, category, fullWidth } = Astro.props;
     <meta name="description" content="Trevor Tyler Lee | Vancouver, Canada" />
     <title>{pageTitle}</title>
   </head>
-  <body class="bg-background text-content" id="body">
-    <div>
-      <Navigation
-        category={category}
-        pageSlug={pageSlug}
-        pageTitle={pageTitle}
-      />
-      <main class=`m-auto ${fullWidth ? "" : " px-6"} max-w-[640px]`>
-        <slot />
-        <click-spark active-on=".send-sparks, #i-love-sparks, [data-sparks]"
-        ></click-spark>
-      </main>
+  <body
+    class=`bg-background text-gray-11 dark:bg-black dark:text-gray-1 m-auto ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+  >
+    <nav class="w-full py-4">
+      <div class="flex items-center justify-between">
+        <div>
+          {
+            !onIndex && (
+              <>
+                <a
+                  class="flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+                  href="/"
+                >
+                  <Icon name="arrow-left" /> back home
+                </a>
+              </>
+            )
+          }
+        </div>
+        <div class="group flex items-center gap-1.5 py-1">
+          <input name="theme-toggle" id="theme-toggle" type="checkbox" />
+          <label
+            class="font-mono text-gray-6 hover:text-foreground focus:text-foreground group-hover:text-foreground group-focus:text-foreground"
+            for="theme-toggle">dark mode</label
+          >
+        </div>
+      </div>
+    </nav>
+    <main>
+      <slot />
+    </main>
+    <!-- <div class="mt-16 ring-2 ring-foreground/10 rounded-2xl py-4 px-2">
+      <Contact client:load />
+    </div> -->
+    <Footer />
+    <div class="font-mono text-xs text-gray-6 text-right pt-2 pb-4">
+      last updated {buildTimeAgo}
     </div>
   </body>
 </html>
-
-<script is:inline>
-  // https://ryanmulligan.dev/
-
-  class ClickSpark extends HTMLElement {
-    constructor() {
-      super();
-      this.attachShadow({ mode: "open" });
-      this.root = document.documentElement;
-      this.svg;
-    }
-
-    get activeEls() {
-      return this.getAttribute("active-on");
-    }
-
-    connectedCallback() {
-      this.setupSpark();
-
-      this.root.addEventListener("click", (e) => {
-        if (this.activeEls && !e.target.matches(this.activeEls)) return;
-
-        this.setSparkPosition(e);
-        this.animateSpark();
-      });
-    }
-
-    animateSpark() {
-      let sparks = [...this.svg.children];
-      let size = parseInt(sparks[0].getAttribute("y1"));
-      let offset = size / 2 + "px";
-
-      let keyframes = (i) => {
-        let deg = `calc(${i} * (360deg / ${sparks.length}))`;
-
-        return [
-          {
-            strokeDashoffset: size * 3,
-            transform: `rotate(${deg}) translateY(${offset})`,
-          },
-          {
-            strokeDashoffset: size,
-            transform: `rotate(${deg}) translateY(0)`,
-          },
-        ];
-      };
-
-      let options = {
-        duration: 500,
-        easing: "cubic-bezier(0.25, 1, 0.5, 1)",
-        fill: "forwards",
-      };
-
-      sparks.forEach((spark, i) => spark.animate(keyframes(i), options));
-    }
-
-    setSparkPosition(e) {
-      let rect = this.root.getBoundingClientRect();
-
-      this.svg.style.left =
-        e.clientX - rect.left - this.svg.clientWidth / 2 + "px";
-      this.svg.style.top =
-        e.clientY - rect.top - this.svg.clientHeight / 2 + "px";
-    }
-
-    setupSpark() {
-      let template = `
-      <style>
-        :host {
-          display: contents;
-        }
-        
-        svg {
-          pointer-events: none;
-          position: absolute;
-          rotate: -20deg;
-          stroke: var(--click-spark-color, currentcolor);
-        }
-
-        line {
-          stroke-dasharray: 30;
-          stroke-dashoffset: 30;
-          transform-origin: center;
-        }
-      </style>
-      <svg width="30" height="30" viewBox="0 0 100 100" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="4">
-        ${Array.from(
-          { length: 8 },
-          (_) => `<line x1="50" y1="30" x2="50" y2="4"/>`,
-        ).join("")}
-      </svg>
-    `;
-
-      this.shadowRoot.innerHTML = template;
-      this.svg = this.shadowRoot.querySelector("svg");
-    }
-  }
-
-  customElements.define("click-spark", ClickSpark);
-
-  const spark = document.querySelector("click-spark");
-  spark.style.setProperty("--click-spark-color", `rgb(var(--primary))`);
-  const colorPicker = document.getElementById("click-spark-color");
-</script>
