--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,17 @@
 ---
+import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
+import profilePicture from "@assets/me-with-roxy.webp";
+import classlessCSS from "@assets/posts/classlesscss.png"
+import t2a from "@assets/posts/t2a.jpg"
+import phished from "@assets/posts/phished.jpg"
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import { formatBlogPost } from "src/lib/utils";
 import { getCollection } from "astro:content";
 import Post from "@components/Post.astro";
 import Project from "@components/Project.astro";
+import CopyButton from "@components/CopyButton";
+import Tags from "@components/Tags";
 
 const allPosts = await getCollection("posts");
 const formattedPosts = formatBlogPost(allPosts, {
@@ -14,45 +22,83 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <span class="mt-12 flex font-sans text-xl font-semibold">Projects</span>
-  <span class="flex border-b border-gray-5 py-2 font-mono dark:border-gray-9">
-    <span class="w-[120px] opacity-70">title</span><span class="opacity-70"
-      >description</span
-    >
-  </span>
-  <ul>
+  <div class="flex flex-col gap-6 py-16 sm:py-24">
+    <div class="flex gap-2">
+      <Image
+        src={profilePicture}
+        format="avif"
+        quality={"med"}
+        alt="Young me with my dog Roxy."
+        class="h-[52px] w-[52px]"
+      />
+      <h1 class="text-3xl font-semibold">
+        TREVOR TYLER LEE
+        <div class="font-mono text-sm font-normal text-gray-6">
+          @boogerbuttcheeks
+        </div>
+      </h1>
+    </div>
+    <div class="flex flex-wrap gap-3">
+      <Tags client:load />
+    </div>
+  </div>
+  <section>
+    <span class="flex justify-between py-2 font-mono text-gray-6">
+      <h2 class="">latest posts</h2>
+      <a
+        href="/rss.xml"
+        class="group flex items-center gap-1 py-1 text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+        ><Icon
+          name="radio"
+          class="group-hover:text-primary group-focus:text-primary"
+        /> rss</a
+      >
+    </span>
+    <ul>
+      {
+        formattedPosts.map((post) => (
+          <Post
+            date={post.data.date}
+            href={post.slug}
+            title={post.data.title}
+            description={post.data.description}
+          />
+        ))
+      }
+    </ul>
+    <div class="flex justify-end pt-2 pb-8">
+      <a
+        href="/posts"
+        class="group flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+        >view older posts <Icon name="arrow-right" /></a
+      >
+    </div>
+  </section>
+  <section>
+    <h2 class="pt-2 pb-5 font-mono text-gray-6">projects</h2>
+    <ul class="grid sm:grid-cols-2 gap-2 sm:gap-6">
     <Project
-      description="Send, monitor, and track phishing emails"
+      description="Site to instantly preview drop-in CSS themes."
+      href="https://classlesscss.com"
+      title="classlesscss.com"
+      src={classlessCSS}
+      online
+    />
+    <Project
+      description="Tired of typing out arrays? Me too..."
+      href="https://text2array.vercel.com"
+      title="text 2 array"
+      src={t2a}
+      online
+    />
+    <Project
+      description="Protect your friends and family from phishing attacks by phishing them yourself."
       href="https://github.com/phished-co/phished_web_app"
       title="Phished"
-    />
-    <Project
-      description="Tired of writing arrays? Me too..."
-      href="https://text2array.vercel.app/"
-      title="text 2 array"
-    />
-    <Project
-      description="Swifties only!"
-      href="https://www.swiftie.red/"
-      title="swiftie.red"
+      src={phished}
     />
   </ul>
-  <span class="mt-8 flex font-sans text-xl font-semibold">Posts</span>
-  <span class="flex border-b border-gray-5 py-2 font-mono dark:border-gray-9">
-    <span class="w-[120px] opacity-70">date</span><span class="opacity-70"
-      >title</span
-    >
-  </span>
-  <ul>
-    {
-      formattedPosts.map((post) => (
-        <Post
-          date={post.data.date}
-          href={post.slug}
-          title={post.data.title}
-          description={post.data.description}
-        />
-      ))
-    }
-  </ul>
+  </section>
 </BaseLayout>
+
+<script></script>
