--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
     :root {
         --gray-1: 242 242 247;
@@ -16,106 +17,24 @@
         --gray-10: 44 44 46;
         --gray-11: 28 28 30;
 
-        --background: var(--gray-11);
-        --content: var(--gray-1);
-        --primary: 59 143 242;
-
-        --red: 255 69 58;
-        --orange: 255 159 10;
-        --yellow: 255 214 10;
-        --green: 50 215 75;
-        --mint: 102 212 207;
-        --teal: 106 196 220;
-        --cyan: 90 200 245;
-        --blue: 10 132 255;
-        --indigo: 94 92 230;
-        --purple: 191 90 242;
-        --pink: 255 55 95;
-        --brown: 172 142 104;
-    }
-
-    strong {
-        color: inherit;
-    }
-
-    /* a[href] {
-        color: rgb(var(--primary));
-    }
-
-    a[href]:hover,
-    a[href]:focus {
-        text-decoration: rgb(var(--primary)) underline;
-    } */
-
-    a,
-    button {
-        touch-action: manipulation;
-    }
-
-    .hr-bg {
-        background-color: rgb(var(--gray-10));
-    }
-}
-
-::selection {
-    background-color: rgb(var(--blue) / 20%);
-    color: rgb(var(--content));
-}
-
-#body {
-    height: 100dvh;
-    font-family: "Atkinson Hyperlegible", sans-serif
-}
-
-#bio {
-    text-wrap: balance;
-}
-
-button {
-    font-family: sans-serif;
-}
-
-@media (prefers-color-scheme:light) {
-    :root {
-        --red: 255 59 48;
-        --orange: 255 149 0;
-        --yellow: 255 204 0;
-        --green: 40 205 65;
-        --mint: 0 199 190;
-        --teal: 89 173 196;
-        --cyan: 85 190 240;
-        --blue: 0 122 255;
-        --indigo: 88 86 214;
-        --purple: 175 82 222;
-        --pink: 255 45 85;
-        --brown: 162 132 94;
-    }
-}
-
-@media (prefers-color-scheme:light) {
-    :root {
-
+        --primary: 66 97 209;
+        --secondary: 152 0 255;
+        --highlight: 0 0 255;
         --background: var(--gray-1);
-        --content: var(--gray-11);
-        --primary: 51 102 204;
-        --visited: 175 82 222;
+        --foreground: var(--gray-11)
+    }
+
+    .dark {
+        --primary: 188 145 62;
+        --secondary: 237 208 84;
+        --highlight: 188 145 62;
+        --background: var(--gray-11);
+        --foreground: var(--gray-1)
     }
 }
 
-@media (prefers-color-scheme: dark) {
-    #content {
-        @apply prose-invert;
-    }
-}
-
-@media (prefers-color-scheme:dark) {
-    pre {
-        background: rgb(10 10 20) !important;
-    }
-}
-
-@media (prefers-color-scheme:light) {
-    .hr-bg {
-        background-color: rgb(var(--gray-2));
+@layer utilities {
+    a {
+        color: rgb(var(--primary))
     }
 }
