--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@ import CopyButton from "../components/CopyButton";
 ---
 
 <footer class="py-16">
-    <details class="ring-2 ring-foreground/10 py-2 rounded-xl px-2 cursor-default hover:bg-gray-2 dark:hover:bg-gray-10">
-      <summary>Contact (click for details)</summary>
+    <details class="ring-2 ring-foreground/10 py-2 rounded-xl px-2 cursor-default">
+      <summary class="cursor-pointer">Contact (click for details)</summary>
       <span class="flex flex-col py-2">
         <span class="cursor-text">trevortylerlee@gmail.com</span>
     <a href="https://github.com/trevortylerlee" class="">Github</a>
