fix safari word wrap bug

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -11,6 +11,7 @@ const { date, href, title, description, last } = Astro.props;
     <span>{title}</span>
     <span class="dashed-line"></span>
     <span
+      id="date"
       class="text-gray-6 group-hover:text-foreground group-focus:text-foreground ring-foreground/10 rounded-sm bg-background p-1 font-mono text-xs ring-1 dark:bg-black no-wrap flex"
       >{formatDate(date, "short")}</span
     >
@@ -51,5 +52,10 @@ const { date, href, title, description, last } = Astro.props;
 
   a:focus {
     outline: auto;
+  }
+
+  #date {
+    white-space: nowrap !important;
+    background-color: red;
   }
 </style>
