--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -58,6 +58,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
         checkbox.addEventListener("change", toggleTheme);
       });
     </script>
+    <script defer src="https://analytics.us.umami.is/script.js" data-website-id="db9f8fea-3974-458c-8aeb-27c9461841e4"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.png" type="image/svg+xml" />
