--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 import profilePicture from "@assets/me-with-roxy.webp";
 import classlessCSS from "@assets/posts/classlesscss.png"
 import t2a from "@assets/posts/t2a.jpg"
-import phished from "@assets/posts/phished.jpg"
+import phished from "@assets/posts/phished.png"
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import { formatBlogPost } from "src/lib/utils";
 import { getCollection } from "astro:content";
