--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -53,7 +53,10 @@ if (pageTitle === "Trevor Lee | Homepage") {
         checkbox.addEventListener("change", toggleTheme);
       });
     </script>
-    <script defer src="https://analytics.us.umami.is/script.js" data-website-id="db9f8fea-3974-458c-8aeb-27c9461841e4"></script>
+    <script
+      defer
+      src="https://analytics.us.umami.is/script.js"
+      data-website-id="db9f8fea-3974-458c-8aeb-27c9461841e4"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.png" type="image/svg+xml" />
@@ -74,7 +77,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
             !onIndex && (
               <>
                 <a
-                  class="flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+                  class="text-gray-6 hover:text-foreground focus:text-foreground flex items-center gap-1 py-1 font-mono no-underline"
                   href="/"
                 >
                   <Icon name="arrow-left" /> back home
@@ -86,7 +89,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
         <div class="group flex items-center gap-1.5 py-1">
           <input name="theme-toggle" id="theme-toggle" type="checkbox" />
           <label
-            class="font-mono text-gray-6 hover:text-foreground focus:text-foreground group-hover:text-foreground group-focus:text-foreground"
+            class="text-gray-6 hover:text-foreground focus:text-foreground group-hover:text-foreground group-focus:text-foreground font-mono"
             for="theme-toggle">dark mode</label
           >
         </div>
@@ -95,27 +98,30 @@ if (pageTitle === "Trevor Lee | Homepage") {
     <main>
       <slot />
     </main>
-    <!-- <div class="mt-16 ring-2 ring-foreground/10 rounded-2xl py-4 px-2">
-      <Contact client:load />
-    </div> -->
     <Footer />
     <div id="build-time" data-time={buildTime}>
-      <div id="last-updated" class="font-mono text-xs text-gray-6 text-right pt-2 pb-4">Last updated: </div>
+      <div
+        id="last-updated"
+        class="text-gray-6 pb-4 pt-2 text-right font-mono text-xs"
+      >
+        updated
+      </div>
     </div>
   </body>
 </html>
 
 <script is:inline>
-  document.addEventListener('DOMContentLoaded', () => {
-    const buildTimeString = document.getElementById('build-time').dataset.time;
+  document.addEventListener("DOMContentLoaded", () => {
+    const buildTimeString = document.getElementById("build-time").dataset.time;
     const buildTime = new Date(buildTimeString);
-    
+
     if (!isNaN(buildTime.getTime())) {
       const now = new Date();
       const timeAgoText = timeAgo(buildTime, now);
-      document.getElementById('last-updated').textContent = `Last updated: ${timeAgoText}`;
+      document.getElementById("last-updated").textContent =
+        `updated ${timeAgoText}`;
     } else {
-      console.error('Invalid build time:', buildTimeString);
+      console.error("Invalid build time:", buildTimeString);
     }
   });
 
@@ -142,6 +148,8 @@ if (pageTitle === "Trevor Lee | Homepage") {
     if (interval >= 1) {
       return interval + " minute" + (interval === 1 ? "" : "s") + " ago";
     }
-    return Math.floor(seconds) + " second" + (seconds === 1 ? "" : "s") + " ago";
+    return (
+      Math.floor(seconds) + " second" + (seconds === 1 ? "" : "s") + " ago"
+    );
   }
 </script>
