--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,71 @@
 ---
-import CopyButton from "../components/CopyButton";
+const buildTime = new Date().toISOString();
 ---
 
-<footer class="py-16">
-    <details class="ring-2 ring-foreground/10 py-2 rounded-xl px-2 cursor-default">
-      <summary class="cursor-pointer">Contact (click for details)</summary>
-      <span class="flex flex-col py-2">
-        <span class="cursor-text">trevortylerlee@gmail.com</span>
-    <a href="https://github.com/trevortylerlee" class="">Github</a>
-    <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
-  </span>
-    </details>
+<footer
+  class="flex flex-col items-center justify-between gap-3 pb-4 pt-16 sm:flex-row"
+>
+  <details
+    class="ring-foreground/10 w-full cursor-default rounded-xl px-2 py-2 ring-2"
+  >
+    <summary class="cursor-pointer">Contact (click for details)</summary>
+    <span class="flex flex-col py-2">
+      <span class="cursor-text">trevortylerlee@gmail.com</span>
+      <a href="https://github.com/trevortylerlee" class="">Github</a>
+      <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a
+      >
+    </span>
+  </details>
+  <div id="build-time" data-time={buildTime} class="min-w-[160px] flex-grow-0">
+    <div
+      id="last-updated"
+      class="text-gray-6 pb-4 pt-2 text-right font-mono text-xs"
+    >
+      updated
+    </div>
+  </div>
 </footer>
+
+<script is:inline>
+  document.addEventListener("DOMContentLoaded", () => {
+    const buildTimeString = document.getElementById("build-time").dataset.time;
+    const buildTime = new Date(buildTimeString);
+
+    if (!isNaN(buildTime.getTime())) {
+      const now = new Date();
+      const timeAgoText = timeAgo(buildTime, now);
+      document.getElementById("last-updated").textContent =
+        `updated ${timeAgoText}`;
+    } else {
+      console.error("Invalid build time:", buildTimeString);
+    }
+  });
+
+  function timeAgo(datePast, dateNow) {
+    const seconds = Math.floor((dateNow - datePast) / 1000);
+    let interval = Math.floor(seconds / 31536000);
+
+    if (interval >= 1) {
+      return interval + " year" + (interval === 1 ? "" : "s") + " ago";
+    }
+    interval = Math.floor(seconds / 2592000);
+    if (interval >= 1) {
+      return interval + " month" + (interval === 1 ? "" : "s") + " ago";
+    }
+    interval = Math.floor(seconds / 86400);
+    if (interval >= 1) {
+      return interval + " day" + (interval === 1 ? "" : "s") + " ago";
+    }
+    interval = Math.floor(seconds / 3600);
+    if (interval >= 1) {
+      return interval + " hour" + (interval === 1 ? "" : "s") + " ago";
+    }
+    interval = Math.floor(seconds / 60);
+    if (interval >= 1) {
+      return interval + " minute" + (interval === 1 ? "" : "s") + " ago";
+    }
+    return (
+      Math.floor(seconds) + " second" + (seconds === 1 ? "" : "s") + " ago"
+    );
+  }
+</script>
