change link and styles in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const buildTime = new Date().toISOString();
 ---
 
 <footer
-  class="flex flex-col items-center justify-between gap-3 sm:gap-20 pb-4 pt-16 sm:flex-row"
+  class="flex flex-col items-baseline justify-between gap-3 pb-4 pt-16 sm:flex-row sm:gap-20"
 >
   <details
     class="ring-foreground/10 w-full cursor-default rounded-xl px-2 py-2 ring-2"
@@ -18,12 +18,12 @@ const buildTime = new Date().toISOString();
   </details>
   <div id="build-time" data-time={buildTime} class="min-w-[160px] flex-grow-0">
     <a
-      href="https://github.com/trevortylerlee/trevortylerlee.com"
+      href="https://github.com/trevortylerlee/trevortylerlee.com/commits/main"
       id="last-updated"
-      class="text-gray-6 pb-4 pt-2 text-right font-mono text-xs no-underline hover:text-foreground focus:text-foreground"
+      class="text-gray-6 hover:text-foreground focus:text-foreground pb-4 pt-2 text-right font-mono text-xs no-underline"
     >
       updated
-  </a>
+    </a>
   </div>
 </footer>
 
