fix meta viewport tag, change meta description, fix multiple id issues on Post component

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -72,10 +72,10 @@ if (pageTitle === "Trevor Lee | Homepage") {
       title="Trevor Tyler Lee"
       href="https://trevortylerlee.com/feed.xml"
     />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="generator" content={Astro.generator} />
     <meta property="og:image" content="/og.jpg" />
-    <meta name="description" content="Trevor Tyler Lee | Vancouver, Canada" />
+    <meta name="description" content="Trevor Tyler Lee | @boogerbuttcheeks " />
     <title>{pageTitle}</title>
   </head>
   <body>
